k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-cd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-cd-demo
  template:
    metadata:
      labels:
        app: ci-cd-demo
    spec:
      containers:
        - name: ci-cd-demo
          image: my-dockerhub-user/ci-cd-demo:latest
          ports:
            - containerPort: 8000
