k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-demo
spec:
  type: ClusterIP
  selector:
    app: ci-cd-demo
  ports:
    - port: 8000
      targetPort: 8000
